--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Unit Tests
 
 on:
   pull_request:
@@ -18,7 +18,7 @@ jobs:
         dotnet-version: 8.x 
 
     - name: Restore dependencies
-      run: dotnet restore src/TrainTicketMachine.sln  # Zmodyfikuj ścieżkę do solucji
+      run: dotnet restore src/TrainTicketMachine.sln
 
     - name: Run tests
-      run: dotnet test src/TrainTicketMachine.sln --verbosity normal
+      run: dotnet test src/Tests/TrainTicketMachine.UnitTests/TrainTicketMachine.UnitTests.csproj --verbosity normal
