--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - develop 
 jobs:
-  test:
+  unit_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,3 +22,21 @@ jobs:
 
     - name: Run tests
       run: dotnet test src/Tests/TrainTicketMachine.UnitTests/TrainTicketMachine.UnitTests.csproj --verbosity normal
+
+  functional_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Core SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 8.x 
+
+    - name: Restore dependencies
+      run: dotnet restore src/TrainTicketMachine.sln
+
+    - name: Run tests
+      run: dotnet test src/Tests/TrainTicketMachine.FunctionalTests/TrainTicketMachine.FunctionalTests.csproj --verbosity normal
