--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - develop 
+  push:
+    branches:
+      - develop
 jobs:
   unit_tests:
     runs-on: ubuntu-latest
@@ -22,21 +25,4 @@ jobs:
 
     - name: Run tests
       run: dotnet test src/Tests/TrainTicketMachine.UnitTests/TrainTicketMachine.UnitTests.csproj --verbosity normal
-
-  functional_tests:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.x 
-
-    - name: Restore dependencies
-      run: dotnet restore src/TrainTicketMachine.sln
-
-    - name: Run tests
-      run: dotnet test src/Tests/TrainTicketMachine.FunctionalTests/TrainTicketMachine.FunctionalTests.csproj --verbosity normal
+      
