--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -1,11 +1,14 @@
-name: Run Tests
+name: Run Unit Tests
 
 on:
   pull_request:
     branches:
       - develop 
+  push:
+    branches:
+      - develop
 jobs:
-  test:
+  unit_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +21,8 @@ jobs:
         dotnet-version: 8.x 
 
     - name: Restore dependencies
-      run: dotnet restore src/TrainTicketMachine.sln  # Zmodyfikuj ścieżkę do solucji
+      run: dotnet restore src/TrainTicketMachine.sln
 
     - name: Run tests
-      run: dotnet test src/TrainTicketMachine.sln --verbosity normal
+      run: dotnet test src/Tests/TrainTicketMachine.UnitTests/TrainTicketMachine.UnitTests.csproj --verbosity normal
+      
