--- a/.github/workflows/run_functional_tests.yml
+++ b/.github/workflows/run_functional_tests.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - develop 
+  push:
+    branches:
+      - develop
 jobs:
   functional_tests:
     runs-on: ubuntu-latest
