--- a/src/TrainTicketMachine.Api/TrainTicketMachine.Api.csproj
+++ b/src/TrainTicketMachine.Api/TrainTicketMachine.Api.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TrainTicketMachine.Core\TrainTicketMachine.Core.csproj" />
   </ItemGroup>
 
 </Project>
