Add editor config and refactor

--- a/src/Tests/TrainTicketMachine.IntegrationTests/TrainTicketMachine.IntegrationTests.csproj
+++ b/src/Tests/TrainTicketMachine.IntegrationTests/TrainTicketMachine.IntegrationTests.csproj
@@ -38,4 +38,12 @@
     <ProjectReference Include="..\..\TrainTicketMachine.Infrastructure\TrainTicketMachine.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\TrainTicketMachine\src\Tests\TrainTicketMachine.IntegrationTests\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="D:\TrainTicketMachine\src\Tests\TrainTicketMachine.IntegrationTests\.editorconfig" />
+  </ItemGroup>
+
 </Project>
