--- a/src/TrainTicketMachine.Api/TrainTicketMachine.Api.csproj
+++ b/src/TrainTicketMachine.Api/TrainTicketMachine.Api.csproj
@@ -16,4 +16,12 @@
     <ProjectReference Include="..\TrainTicketMachine.Core\TrainTicketMachine.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\TrainTicketMachine\src\TrainTicketMachine.Api\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="D:\TrainTicketMachine\src\TrainTicketMachine.Api\.editorconfig" />
+  </ItemGroup>
+
 </Project>
